--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Contact.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Contact.cshtml
@@ -26,12 +26,12 @@
                     </div>
                     <div>
                         <label for="subject">Subject*</label>
-                        <input type="text" class="form-control" asp-for="Subject" id="subject" placeholder="Enter your subject" />
+                        <input type="text" class="form-control" asp-for="Subject" placeholder="Enter your subject" />
                         <span class="text-danger text-14" asp-validation-for="Subject"></span>
                     </div>
                     <div>
                         <label for="message">Message*</label>
-                        <textarea type="text" class="form-control" asp-for="Message" rows="4" id="message"
+                        <textarea type="text" class="form-control" asp-for="Message" rows="4"
                                   placeholder="Enter your message"></textarea>
                         <span class="text-danger text-14" asp-validation-for="Message"></span>
                     </div>
