--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/UserProfile.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/User/UserProfile.cshtml
@@ -176,6 +176,7 @@
                         <div data-pre="@userSkill.SkillId">
                             @userSkill.Skill.SkillName
                         </div>
+                        <input hidden name="skillIds" value=@userSkill.SkillId>
                     }
                 </div>
             </div>
