--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/MissionTimesheet.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/MissionTimesheet.cshtml
@@ -1,5 +1,7 @@
-﻿@{
+﻿@model List<MissionTimesheetVM>
+@{
     ViewData["Title"] = "Mission Timesheet";
+    var userId = long.Parse(Context.Session.GetString("UserId")!);
 }
 <style>
     .ts-table {
@@ -12,84 +14,28 @@
     }
 
     th {
-        padding-bottom: 0.75rem;
+        padding-bottom: 0.5rem;
     }
 
     td {
         font-size: 15px;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
     }
 </style>
-
+<input hidden id="userId" value="@userId"/>
+<div class="grid-body d-grid min-vh-100">
 <partial name="_Navbar"></partial>
 <main class="container py-5">
     <p class="top-titles color-darkgray fw-light">Volunteering Timesheet</p>
-    <section class="d-flex flex-column flex-lg-row gap-3">
-        <div class="flex-basis-100 border shadow-sm p-3 py-md-4">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <div class="fw-light">Volunteering Hours</div>
-                <button class="btn button d-flex gap-2 px-3" data-bs-toggle="modal"
-                        data-bs-target="#hoursModal">
-                    <span class="fw-bold">+</span> Add
-                </button>
-            </div>
-            <div class="ts-table table-responsive">
-                <table class="w-100">
-                    <thead>
-                        <tr>
-                            <th>Mission</th>
-                            <th>Date</th>
-                            <th>Hours</th>
-                            <th>Minutes</th>
-                        </tr>
-                    </thead>
-                    <tbody class="fw-light">
-                        <tr>
-                            <td>Environment Conservation</td>
-                            <td>22/02/02</td>
-                            <td>1h</td>
-                            <td>30min</td>
-                            <td class="d-flex width-max-conatent gap-2 flex">
-                                <img src="./image/editing.png" alt="edit" height="20px" width="20px">
-                                <img src="./image/bin.png" alt="bin" height="20px" width="20px">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="flex-basis-100 border shadow-sm p-3 py-md-4">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <div class="fw-light">Volunteering Goals</div>
-                <button class="btn button d-flex gap-2 px-3" data-bs-toggle="modal"
-                        data-bs-target="#goalsModal">
-                    <span class="fw-bold">+</span> Add
-                </button>
-            </div>
-
-            <div class="ts-table table-responsive">
-                <table class="w-100">
-                    <thead>
-                        <tr>
-                            <th>Mission</th>
-                            <th>Date</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody class="fw-light">
-                        <tr>
-                            <td>Environment Conservation</td>
-                            <td>22/02/02</td>
-                            <td>1</td>
-                            <td class="d-flex width-max-conatent gap-2">
-                                <img src="./image/editing.png" alt="edit"
-                                     height="20px" width="20px"><img src="./image/bin.png" alt="bin" height="20px"
-                                                                     width="20px">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <section id="partialTimesheetContainer" class="d-flex flex-column flex-lg-row gap-3">
+        <partial name="_MissionTimesheetPartial"></partial>
     </section>
 </main>
 <partial name="_Footer"></partial>
+</div>
+<div id="partialTimesheetModalContainer"></div>
+
+@section Scripts{
+    <script src="/js/timesheet.js"></script>
+}
