--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Footer.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
 <footer class="border-top">
     <div class="container py-4 fw-light d-flex gap-3">
         <a asp-action="Privacy" asp-controller="Home" class="color-darkgray">Privacy Policy</a>
-        <a class="cursor-pointer color-darkgray" id="contactBtn" data-bs-target="#contactModal">Contact us</a>
+        <a class="cursor-pointer color-darkgray" id="contactBtn">Contact us</a>
     </div>
     <div id="partialContactContainer"></div>
 </footer>
