--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionTimesheetPartial.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionTimesheetPartial.cshtml
@@ -12,7 +12,7 @@
         </button>
     </div>
     <div class="ts-table table-responsive">
-        <table class="w-100">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Mission</th>
@@ -39,11 +39,14 @@
                         <td>@time.TimeVolunteered.Value.Minutes min</td>
                         @if (time.ApprovalStatus == ApprovalStatus.PENDING)
                         {
-                            <td class="d-flex width-max-conatent gap-2 flex">
+                            <td>
+                                <div class="d-flex gap-2">
                                 <img src="/images/static/editing.png" class="editHour cursor-pointer" alt="edit" height="20px" width="20px"
                              data-id="@time.TimesheetId">
                                 <img src="/images/static/bin.png" class="deleteHour cursor-pointer" alt="bin" height="20px" width="20px"
                              data-id="@time.TimesheetId">
+
+                                </div>
                             </td>
                         }
                     </tr>
@@ -61,7 +64,7 @@
     </div>
 
     <div class="ts-table table-responsive">
-        <table class="w-100">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Mission</th>
@@ -86,11 +89,13 @@
                         <td>@goal.Action</td>
                         @if (goal.ApprovalStatus == ApprovalStatus.PENDING)
                         {
-                            <td class="d-flex width-max-conatent gap-2">
+                            <td>
+                                <div class="d-flex gap-2">
                                 <img src="/images/static/editing.png" class="editGoal cursor-pointer" alt="edit"
                              height="20px" width="20px" data-id="@goal.TimesheetId">
                                 <img src="/images/static/bin.png" class="deleteGoal cursor-pointer" alt="bin" height="20px" width="20px"
                              data-id="@goal.TimesheetId">
+                             </div>
                             </td>
                         }
                     </tr>
