--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
@@ -126,5 +126,6 @@
 </div>
 
 @section Scripts{
+    <script src="~/js/sweetAlerts.js"></script>
     <script type="module" src="~/js/index.js"></script>
 }
