--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Story/_Story.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Story/_Story.cshtml
@@ -1,18 +1,7 @@
 ﻿@using CI_Platform.Entities.Constants
 @model List<StoryVM>
-<style>
-    .PENDING{
-        color:  #007bff;
-    }
-    .APPROVED{
-        color: #28a745;
-    }
-    .DECLINED{
-        color: #dc3545;
-    }
-</style>
 <div class="border-bottom mb-4">
-    <h4 class="border-bottom border-dark width-max-conatent m-0 pb-3 pe-2">User</h4>
+    <h4 class="border-bottom border-dark width-max-conatent m-0 pb-3 pe-2">Story</h4>
 </div>
 <div class="d-flex align-items-center adminSearchContainer mb-4 gap-1">
     <div class="d-flex align-items-center border border-2 rounded py-1 ps-2 gap-1 flex-grow-1">
@@ -40,7 +29,7 @@
             {
                 <tr>
                     <td colspan="100%">
-                        <div class="text-center py-3">No users found.</div>
+                        <div class="text-center py-3">No stories found.</div>
                     </td>
                 </tr>
             }
@@ -63,7 +52,7 @@
                         @(story.PublishedAt?.ToString("d") ?? "-")
                     </td>
                     <td>
-                        <a asp-action="ViewStory" target="_blank" asp-route-id="@story.StoryId" class="btn button text-14 px-3 py-1">View</a>
+                        <a asp-action="ViewStory" target="_blank" asp-route-id="@story.StoryId" class="btn button-plain text-14 px-3 py-1">View</a>
                         @if (story.ApprovalStatus == ApprovalStatus.DECLINED)
                         {
                             <img src="/images/static/arrow-clockwise.svg" class="cursor-pointer d-inline width-max-conatent"
