--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionTimesheetPartial.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/_MissionTimesheetPartial.cshtml
@@ -41,12 +41,23 @@
                         {
                             <td>
                                 <div class="d-flex gap-2">
-                                <img src="/images/static/editing.png" class="editHour cursor-pointer" alt="edit" height="20px" width="20px"
-                             data-id="@time.TimesheetId">
-                                <img src="/images/static/bin.png" class="deleteHour cursor-pointer" alt="bin" height="20px" width="20px"
-                             data-id="@time.TimesheetId">
-
+                                    <img src="/images/static/editing.png" class="editHour cursor-pointer" alt="edit" height="20px" width="20px"
+                                 data-id="@time.TimesheetId">
+                                    <img src="/images/static/bin.png" class="deleteHour cursor-pointer" alt="bin" height="20px" width="20px"
+                                 data-id="@time.TimesheetId">
                                 </div>
+                            </td>
+                        }
+                        else if (time.ApprovalStatus == ApprovalStatus.APPROVED)
+                        {
+                            <td>
+                                <img src="/images/static/check-circle.svg" alt="edit" height="20px" width="20px">
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                                <img src="/images/static/x-circle.svg" alt="edit" height="20px" width="20px">
                             </td>
                         }
                     </tr>
@@ -91,11 +102,11 @@
                         {
                             <td>
                                 <div class="d-flex gap-2">
-                                <img src="/images/static/editing.png" class="editGoal cursor-pointer" alt="edit"
-                             height="20px" width="20px" data-id="@goal.TimesheetId">
-                                <img src="/images/static/bin.png" class="deleteGoal cursor-pointer" alt="bin" height="20px" width="20px"
-                             data-id="@goal.TimesheetId">
-                             </div>
+                                    <img src="/images/static/editing.png" class="editGoal cursor-pointer" alt="edit"
+                                 height="20px" width="20px" data-id="@goal.TimesheetId">
+                                    <img src="/images/static/bin.png" class="deleteGoal cursor-pointer" alt="bin" height="20px" width="20px"
+                                 data-id="@goal.TimesheetId">
+                                </div>
                             </td>
                         }
                     </tr>
