--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_AddTimeMission.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_AddTimeMission.cshtml
@@ -80,7 +80,8 @@
                 <div>
                     <label asp-for="StartDate"></label>
                     <input type="date" class="form-control" asp-for="StartDate" placeholder="Select date">
-                    <span class="text-danger text-14" asp-validation-for="StartDate"></span>
+                    <span class="text-danger text-14" asp-validation-for="StartDate" id="StartDateError"></span>
+                    <span class="text-danger text-14" id="StartDateError"></span>
                 </div>
                 <div>
                     <label asp-for="EndDate"></label>
@@ -96,6 +97,7 @@
                 <div>
                     <label asp-for="RegistrationDeadline"></label>
                     <input type="date" class="form-control" asp-for="RegistrationDeadline" placeholder="Select date">
+                    <span class="text-danger text-14" id="RegistrationDeadlineError"></span>
                 </div>
             </div>
             <div>
