--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Home/Index.cshtml
@@ -11,7 +11,8 @@
     th {
         font-weight: 500;
         font-size: 1.25rem !important;
-        padding: 1rem 1rem !important;
+        padding-top: 0.75rem;
+        padding-bottom: 0.75rem;
         background-color: #F8F9FC !important;
     }
 
@@ -20,7 +21,6 @@
     }
 
     .table tbody > tr > td {
-        padding-left: 1rem !important;
         padding-top: 0.75rem;
         padding-bottom: 0.75rem;
     }
@@ -78,7 +78,7 @@
             Contact Us
         </div>
     </aside>
-    <div class="flex-grow-1 flex-shrink-1 admin-right">
+    <div class="flex-grow-1 flex-shrink-1">
         <nav class="d-flex justify-content-between align-items-center py-1 px-3 shadow-sm">
             <div class="d-flex gap-3 align-items-center">
                 <img src="/images/static/list.png" alt="list" class="hamburger d-lg-none cursor-pointer">
@@ -93,10 +93,6 @@
                     <img src="/images/static/drop-down.png" alt="drop-down">
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-md-start">
-                    <li>
-                        @*<a class="dropdown-item" id="myprofileBtn" asp-action="AdminProfile" asp-controller="Home"
-                           asp-route-userId="@userId">My Profile</a>*@
-                    </li>
                     <li><a id="logoutBtn" class="dropdown-item">Logout</a></li>
                 </ul>
             </div>
