--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_EditTimeMission.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Admin/Views/Mission/_EditTimeMission.cshtml
@@ -82,6 +82,7 @@
                     <label asp-for="StartDate"></label>
                     <input type="date" class="form-control" asp-for="StartDate" placeholder="Select date">
                     <span class="text-danger text-14" asp-validation-for="StartDate"></span>
+                    <span class="text-danger text-14" id="StartDateError"></span>
                 </div>
                 <div>
                     <label asp-for="EndDate"></label>
